--- a/mmstudio/src/org/micromanager/conf/conf_synchro_page.html
+++ b/mmstudio/src/org/micromanager/conf/conf_synchro_page.html
@@ -9,7 +9,7 @@
 
 
 <span style="font-family: Helvetica,Arial,sans-serif;">
-The camera will wait for each device in the 'synchrozed devices' list to finish current actions, before taking an image.<br>
+The camera will wait for each device in the 'synchronized devices' list to finish current actions, before taking an image.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br>
 Selecting a large number of devices for the synchro list may degrade
 system peformance. Select only devices that are likely to
