--- a/mmstudio/src/org/micromanager/conf/conf_finish_page.html
+++ b/mmstudio/src/org/micromanager/conf/conf_finish_page.html
@@ -5,10 +5,8 @@
 
 
 <body>
-
-
-<span style="font-family: Helvetica,Arial,sans-serif;">The configuration Wizard finished building the hardware configuration for your system. </span><span style="font-family: Helvetica,Arial,sans-serif;">
-
-</span>
+    <h2>Finished!</h2>
+You have successfully <b>completed</b>
+the Configuration Wizard and the hardware configuration for your system has been built. 
 </body>
 </html>
