--- a/mmstudio/src/org/micromanager/conf/conf_intro_page.html
+++ b/mmstudio/src/org/micromanager/conf/conf_intro_page.html
@@ -7,19 +7,16 @@
 
 <body>
 
-<span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">Welcome
-to the
-Micro-Manager Configuration Wizard</span><br style="font-family: Helvetica,Arial,sans-serif;">
+    <h2>Welcome to the Micro-Manager Configuration Wizard</h2>
 
-<p><span style="font-family: Helvetica,Arial,sans-serif;">The
-   Configuration Wizard will help you configure
-the
-Micro-Manager software to work with your hardware setup. In this first step you decide whether 
-to create a new hardware
-configuration or modiy an existing one. Either way, you will be
-prompted for the name of the new or modified configuration file at the
-end of the Wizard sequence, or any time you quit the wizard.
-</span></p><br>
+<p><span style="font-family: Helvetica,Arial,sans-serif;">
+The Hardware Configuration Wizard will help you setup Micro-Manager software to work with your hardware. 
+<ul>
+<li>In this first step you can choose whether 
+to create a new hardware configuration or modify an existing one. </li>
+<li>At the end of the wizard sequence, or any time you quit the wizard, you will be
+given a chance to give the configuration file a name.</li>
+</span></p>
 
 </body>
 </html>
