--- a/mmstudio/src/org/micromanager/conf/conf_labels_page.html
+++ b/mmstudio/src/org/micromanager/conf/conf_labels_page.html
@@ -6,15 +6,19 @@
 
 
 <body>
-
-
-<span style="font-family: Helvetica,Arial,sans-serif;">State devices
-with discrete positions, such as filter changers or objective turrets,
-etc. should have mnemonic labels assigned for each position.<br>
-Select the device in the left-hand list and edit the corresponding position labels in the right-hand list.<br>
-The <b>Read</b> button will read labels for the selected device directly from the hardware.  The <b>Reset</b> button will reset the labels of the selected device to the values they had when you entered this page.
-</span><span style="font-family: Helvetica,Arial,sans-serif;">
-
-</span>
+    <h2>Assigning labels</h2>
+<ul>
+<li>At left are 'State devices' such as filters, objective turrets, etc., which have 
+discrete positions. </li>
+<li>Here assign labels corresponding to each position so that you can easily identify them during use.
+    For example. Position 1, Position 2... could be labeled as Cy3, Cy5...</li>
+<li>Select the device in the left-hand list and edit the corresponding position labels in the right-hand list.</li>
+</ul>
+Note:
+<ul>
+<li>The <b>Read</b> button will read labels for the selected device directly from the hardware.</li>  
+<li>The <b>Reset</b> button will reset the labels of the selected device to the values they had when you 
+entered this page.</li>
+</ul>
 </body>
 </html>
