--- a/mmstudio/src/org/micromanager/conf/conf_prefpreinit_page.html
+++ b/mmstudio/src/org/micromanager/conf/conf_prefpreinit_page.html
@@ -8,9 +8,9 @@
 <body>
 
 
-    <h2>Pre-initialization Properties</h2>
-<ol>
-<li>This list contains all devices that must be given a particular setting prior to initialization.</li>
+<h2>Pre-initialization properties for Sub-Devices</h2>
+<ul>
+<li>This list contains all sub-devices that must be given a particular setting prior to initialization.</li>
 <li>More explanation of your devices' pre-initialization properties may be found
     on individual device pages under the <b>Devices</b> tab on the Micro-Manager website, www.micro-manager.org. </li> 
 <li>If you are using any serial devices (indicated by the presence of a "Port"
@@ -20,7 +20,6 @@
 <li>Some devices do not support automatic port assignment.
     In that case you will need to tell Micro-Manager
     which serial port to use to communicate with a particular device.</li>
-
-</span>
+</ul>
 </body>
 </html>
