--- a/mmstudio/src/org/micromanager/conf/conf_roles_page.html
+++ b/mmstudio/src/org/micromanager/conf/conf_roles_page.html
@@ -8,15 +8,11 @@
 <body>
 
 
-   <span style="font-family: Helvetica,Arial,sans-serif;"><b>Default device roles</b> must be defined.<br>
-Micro-Manager can work with multiple cameras, shutters and Z-stages (focus drives), however, at any given time only one of these is the 'active' one. 
-The software needs to know which camera is going to be
-treated as the default one, which shutter will be associated with the camera
-and which stage is going to be used for focusing. These
-roles can later be changed on-the-fly through configuration presets.
-</span><span style="font-family: Helvetica,Arial,sans-serif;">
-
-
-</span>
-</body>
+   <h2>Default Device Roles</h2> 
+       <ul>
+           <li>Micro-Manager treats one camera, shutter and focus stage as "defaults" for the main control window.</li>
+           <li>Here you can choose the defaults for Micro-Manager startup.</li>
+           <li>These default roles can be changed at any time while Micro-Manager is running
+               through the Device/Property Browser (as properties of the Core).</li>
+       </ul>
 </html>
